--- a/Twordle-Kabeer/styles.css
+++ b/Twordle-Kabeer/styles.css
@@ -273,6 +273,41 @@ body {
     animation: flip 0.6s ease-in-out;
 }
 
+.timer-container {
+  position: relative;
+  width: 120px;
+  height: 120px;
+  display: inline-block;
+}
+.timer-svg {
+  width: 100%;
+  height: 100%;
+  transform: rotate(-90deg);
+}
+.timer-bg {
+  fill: none;
+  stroke: #eee;
+  stroke-width: 10;
+}
+.timer-progress {
+  fill: none;
+  stroke: #76c7c0;
+  stroke-width: 10;
+  stroke-dasharray: 283;
+  stroke-dashoffset: 0;
+  transition: stroke-dashoffset 1s linear;
+}
+.timer-label {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2rem;
+  color: #333;
+  font-family: sans-serif;
+}
+
+
 @media (max-width: 768px) {
     .container {
         padding: 1rem;
